fixed some CSS classes, changed the wording in some places

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <div class="jumbotron jumbotron-fluid jumbo-color">
             <div class="container desc-txt">
-              <h1 class="display-4 title-edit">Gabe's Portfolio</h1>
-              <p class="lead">Hey! My name is Gabe Thomas, and this is my personal Portfolio!</p>
+              <h1 class="display-4 title-edit">Gabe Thomas</h1>
+              <p class="lead">Feel free to look around and check out some of my projects!</p>
             </div>
             <nav>
                 <ul> 
@@ -86,7 +86,7 @@
 
     </div>
 
-    <footer class="text-center text-white foot-size" style="background-color: #2a4858;">
+    <footer class="text-center text-white foot-size" id="contact" style="background-color: #2a4858;">
 
         <!-- Grid container -->
         <div class="container p-4">
