media query for 414px finished

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     </div>
 
-    <footer class="text-center text-white foot-size" id="contact" style="background-color: #2a4858;">
+    <footer class="text-center text-white" id="contact" style="background-color: #2a4858;">
 
         <!-- Grid container -->
         <div class="container p-4">
@@ -99,7 +99,7 @@
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0 git-card">
                 <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
                   <a href="https://github.com/samohtebag" target=_blank>
-                    <img src="./images/Octocat.jpg" class="w-100"/>
+                    <img src="./images/Octocat.jpg" class="w-100 foot-size"/>
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
                   </a>
                 </div>
@@ -108,7 +108,7 @@
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0 li-card">
                 <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
                   <a href="https://www.linkedin.com/in/gabriel-thomas513/" target=_blank>
-                    <img src="./images/174857.png" class="w-100"/>
+                    <img src="./images/174857.png" class="w-100 foot-size"/>
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
                   </a>
                 </div>
@@ -117,7 +117,7 @@
               <div class="col-lg-2 col-md-12 mb-4 mb-md-0 ig-card">
                 <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-ripple-color="light">
                  <a href="https://www.instagram.com/samohtebag/" target=_blank>
-                    <img src="./images/5ecec78673e4440004f09e77.png" class="w-100"/>
+                    <img src="./images/5ecec78673e4440004f09e77.png" class="w-100 foot-size"/>
                     <div class="mask"style="background-color: rgba(251, 251, 251, 0.2);"></div>
                   </a>
                 </div>
