final readme + finalized some changes in the HTML

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="container desc-txt">
               <h1 class="display-4 title-edit">Gabe Thomas</h1>
               <p class="lead">Feel free to look around and check out some of my projects!</p>
+              <p class="lead"><a href = "gthomas513@gmail.com">gthomas513@gmail.com</a></p>
             </div>
             <nav>
                 <ul> 
