--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#work">Work</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <!-- link to download my resume  -->
-                    <li><a href="./assets/Gabriel_Thomas_RESUMECV (1).pdf" target="_blank">Resume</a></li>
+                    <li><a href="./assets/Gabriel_Thomas_RESUME_CV.pdf" target="_blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
