--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="assets/style.css">
     <title>Gabe Thomas's Portfolio</title>
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="jumbotron jumbotron-fluid jumbo-color">
             <div class="container desc-txt">
               <h1 class="display-4 title-edit">Gabe Thomas</h1>
@@ -20,17 +21,30 @@
               <p class="lead"><a href = "mailto:gthomas513@gmail.com">gthomas513@gmail.com</a></p>
             </div>
             <nav>
-                <ul> 
+                <!-- <ul> 
                     <!-- anchor links -->
-                    <li><a href="#about-me">About Me</a></li>
+                    <!-- <li><a href="#about-me">About Me</a></li>
                     <li><a href="#work">Work</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <!-- link to download my resume  -->
-                    <li><a href="./assets/Gabriel_Thomas_RESUME_CV.pdf" target="_blank">Resume</a></li>
-                </ul>
-            </nav>
+                    <!-- <li><a href="./assets/Gabriel_Thomas_RESUME_CV.pdf" target="_blank">Resume</a></li>
+                </ul> -->
+            <!-- </nav>
         </div>
-    </header>
+    </header> -->
+
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo" style="margin-left: 20px;">Gabe's Coding Portfolio</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <!-- link to download my resume  -->
+            <li><a href="./assets/Gabriel_Thomas_RESUME_CV.pdf" target="_blank">Resume</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <!-- bgimage class for the NYC Skyline image -->
      <section class="bgimage"></section>
@@ -75,11 +89,11 @@
             </div>
 
             <div class="card">
-                <img src="./images/Weather Dashboard.jpg" class="card-img-top" alt="...">
+                <img src="./images/Flea Commerce (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://samohtebag.github.io/weather-dashboad-app/">Weather Dashboard</a></h5>
-                    <p class="card-text">This is a weather dashboard to search the weather in any city. It was created using HTML (Bootstrap), some CSS, JavaScript, and utilizing the OpenWeather API.</p>
-                    <p class="card-text"><a href="https://github.com/samohtebag/weather-dashboad-app">Click here to visit the github repo</a></p>
+                    <h5 class="card-title"><a href="https://samohtebag.github.io/weather-dashboad-app/">Flea Commerce</a></h5>
+                    <p class="card-text">This is a e-commerce market similar to Craigslist, where users can upload their own content and others can reach out via email to purchase. This project was created using our own API in combination with Cloudinary's API for handling images.</p>
+                    <p class="card-text"><a href="hhttps://github.com/samohtebag/FLEA-COMMERCE">Click here to visit the github repo</a></p>
                 </div>
             </div>
 
